# rust-autograd

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  run_test.sh  rustfmt.toml
.github/workflows/: rust.yml
examples/: cnn_mnist.rs  download_imdb.sh  download_mnist.sh  lib.rs  lstm_imdb.rs  lstm_lm.rs  mlp_mnist.rs  mnist_data.rs  sine.rs
flamegraph_test/: large_graph.rs
src/: context.rs  dataset.rs  errors.rs  eval.rs  evaluation.rs  gradient.rs  graph.rs  graph_sources.rs  hook.rs  hooks.rs  initializers.rs  lib.rs  ndarray_ext.rs  op.rs  prelude.rs  runtime.rs  sgd.rs  tensor.rs  test_helper.rs  topology.rs  train.rs  variable.rs
src/c/: conv.c
src/gradient_descent/: mod.rs  optimizers.rs
src/nn_impl/: mod.rs  rnn.rs
src/ops/: activation_ops.rs  add_n.rs  array_ops.rs  basic_source_ops.rs  batch_matmul.rs  binary_ops.rs  clip.rs  cmp_ops.rs  concat.rs  const_gen_ops.rs  conv_ops.rs  dot_ops.rs  dummy_op.rs  elu.rs  embedding_lookup.rs  expand_dims.rs  gather.rs  generator_ops.rs  gradient_ops.rs  hook_ops.rs  identity.rs  index.rs  log_softmax.rs  logsumexp.rs  math_ops.rs  matmul.rs  mean_squared_error.rs  mkl_ffi.rs  mod.rs  permute_dims.rs  random_ops.rs  reduction_ops.rs  relu.rs  reshape.rs  reverse_axes.rs  scalar.rs  setdiff1d.rs  shape_ops.rs  sigmoid.rs  sigmoid_cross_entropy.rs  (+12 more)
src/ops/conv_ops/: conv2d.rs  conv2d_transpose.rs  max_pool.rs  max_pool2d.rs  mod.rs
src/ops/gradient_descent_ops/: adam.rs  mod.rs  sgd.rs
src/optimizers/: adagrad.rs  adam.rs  mod.rs  momentum_sgd.rs  sgd.rs
src/tensor_ops/: activation_ops.rs  array_ops.rs  basic_source_ops.rs  binary_ops.rs  blas_ffi.rs  const_gen_ops.rs  dot_ops.rs  gradient_ops.rs  graph_ops.rs  higher_order_ops.rs  hook_ops.rs  math_ops.rs  mod.rs  random_ops.rs  reduction_ops.rs  xent_ops.rs
src/tensor_ops/conv_ops/: conv2d.rs  conv2d_transpose.rs  max_pool2d.rs  mod.rs
src/tensor_ops/gradient_descent_ops/: adagrad.rs  adam.rs  common.rs  mod.rs  sgd.rs
tests/: lib.rs  test_array_gen.rs  test_binary_op_eval.rs  test_binary_op_grad.rs  test_binary_ops_eval.rs  test_binary_ops_grad.rs  test_core.rs  test_graph_eval.rs  test_graph_source.rs  test_initializer.rs  test_optimizers.rs  test_reduction_op_eval.rs  test_tensor_op_eval.rs  test_tensor_ops_eval.rs  test_tensor_ops_grad.rs  test_topology.rs
