[package]
name = "autograd"
version = "0.9.3"
authors = ["raskr <janne.dc.ib.sa@gmail.com>"]
edition = "2018"

repository = "https://github.com/raskr/rust-autograd"
keywords = ["numerics", "machine-learning", "ndarray", "multidimensional", "neural-network"]
license-file = "LICENSE"
readme = "README.md"
description = "Tensors and differentiable operations in Rust"
documentation = "https://docs.rs/autograd/"

[dependencies]
rand = "0.3.15"
ndarray = "0.12.1"
glob = "0.2"
rayon = "1.0"
libc = "0.2"
matrixmultiply = "0.2.2"
intel-mkl-src = { version="0.2.5", optional = true, default-features = true }
num-traits = "0.2"
num = "0.2"

[features]
mkl = ["intel-mkl-src"]

[lib]
name = "autograd"
path = "src/lib.rs"

[[example]]
name = "mlp_mnist"
path = "examples/mlp_mnist.rs"

[[example]]
name = "lstm_lm"
path = "examples/lstm_lm.rs"

[[example]]
name = "cnn_mnist"
path = "examples/cnn_mnist.rs"
