[package]
name = "autograd"
version = "2.0.0-rc3"
authors = ["raskr <janne.dc.ib.sa@gmail.com>"]
edition = "2021"

repository = "https://github.com/raskr/rust-autograd"
keywords = ["numerics", "machine-learning", "ndarray", "multidimensional", "neural-network"]
license-file = "LICENSE"
readme = "README.md"
description = "Tensors and differentiable operations in Rust"
documentation = "https://docs.rs/autograd/"

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"
ndarray = { version = "0.16.1", features = ["serde", "approx"] }
rayon = "1.0"
libc = "0.2"
matrixmultiply = "0.3.2"
num-traits = "0.2"
num = "0.4.0"
rustc-hash = "1.0.1"
smallvec = "1.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
serde = "1.0.120"
serde_derive = "1.0.120"
serde_json = "1.0"
approx = "0.5.1"
special = "0.10.2"
# -- blas deps
blas-src = { version = "0.8", optional = true, default-features = false }
intel-mkl-src = { version = "0.5", optional = true, default-features = false }
cblas-sys = { version = "0.1.4", optional = true, default-features = false }

[features]
blas = []
intel-mkl = ["intel-mkl-src", "cblas-sys"]
accelerate = ["blas-src/accelerate", "cblas-sys"]
openblas = ["blas-src/openblas", "cblas-sys"]

[lib]
name = "autograd"
path = "src/lib.rs"

[[example]]
name = "mlp_mnist"
path = "examples/mlp_mnist.rs"

[[example]]
name = "lstm_lm"
path = "examples/lstm_lm.rs"

[[example]]
name = "cnn_mnist"
path = "examples/cnn_mnist.rs"

[[example]]
name = "sine"
path = "examples/sine.rs"
